--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@ people and organizations.</span
                 <h4>HTML5,CSS3 &amp; PHP</h4>
               </div>
             </div>
+		  <div class="col-md-6">
+              <div class="service-item">
+                <div class="fourth-service-icon service-icon"></div>
+                <h4>Data science and Machine learning</h4>
+              </div>
+            </div>
+
             <div class="col-md-6">
               <div class="service-item">
                 <div class="second-service-icon service-icon"></div>
