--- a/index.html
+++ b/index.html
@@ -143,7 +143,13 @@ people and organizations.</span
 			<div class="line-dec"></div>
 			<div>
 			<h4>Housing Price Prediction Using Random Forest (Data Science)</h4>
-			 <a href="https://drive.google.com/drive/folders/10FQ5TwgNCREORkwWWePBavUB2QeQWY_P?usp=sharing">See my project</a> 
+			 <a href="https://drive.google.com/file/d/1e-yz8jsf-obLxiFre_s25eHYlPENR2G4/view?usp=sharing">INTRODUCTION</a> 
+			<a href="https://drive.google.com/file/d/1M0YX_DDy8hfvmY95YoOq0IondSbprBdB/view?usp=sharing">THEORETICAL FEASIBILITY OF THE TECHNOLOGY</a>
+			<a href="https://drive.google.com/file/d/1KiD7EzPT3Lat4TNaxeRWSSZvT9ER9TII/view?usp=sharing">PRACTICAL FEASIBILITY</a>
+			<a href="https://drive.google.com/file/d/1xr4DhMePnS3SZnBYVoHbmTlvfthtrrX9/view?usp=sharing">CONCLUSION</a>
+			<a href="https://drive.google.com/file/d/1Xph2ACFi3JM4DaT2EYxcDBMLZUWxFbDe/view?usp=sharing">REREFECE</a>
+			<a href="https://drive.google.com/file/d/1yg5r4aXrMdg7cIXw1dUZ-AxVfil0uVHA/view?usp=sharing">APPENDIX</a>
+			<a href="https://drive.google.com/file/d/1i6bHq8s0zEnEODzD1EZ_Jx38opuPS9ga/view?usp=sharing">Phase of Data Science Presentation</a>
 			</div>
             
    
