--- a/index.html
+++ b/index.html
@@ -79,6 +79,34 @@ improve my IT skills. My greatest passion is in life is using my technical know-
 people and organizations.</span
             >
           </div>
+		<div class="section-heading">
+            <h2>Educations</h2>
+            <div class="line-dec"></div>
+            <span
+              >
+			  <P><b>Bsc in Computer Science and Engineering</b></P>
+<p>Leeds Trinity University, UK.</p>
+<p>11/2020 - Present</p>
+<P><b>Higher national diploma in CSD</b></p>
+<P>Pearson Edexcel, UK</p>
+<P>07/2019 - 09/2020</p>
+<P><b>Diploma in IT networking</b></p>
+<P>Canberra Institute of Technology, Australia.</p>
+<P>02/2014 - 06/2016</P> 
+<P><b>CCNA/CCNP</b></p>
+<P>Cisco Networking Academy, USA</p>
+<p>02/2014 - 06/2016</p>
+<P><b>Higher Secondary Certificate</b></p>
+<P>Mohammadpur Model School & College</P>
+<p>Dhaka, Bangladesh</p>
+<p>01/2010 - 01/2012</p>
+<P><b>Secondary School Certificate</b></p>
+<p>Mohammadpur Model School & College,</p>
+<p>Dhaka, Bangladesh.</p>
+<p>01/2008 - 01/2010</p>
+			  </span
+            >
+          </div>
         </div>
       </section>
 
