--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<div class="image">
-              <a href="#"><img src="assets/images/FB_IMG_1610354431125" alt="" /></a>
+              <a href="#"><img src="assets/images/FB_IMG_1610354431125.jpg" alt="" /></a>
             </div>
   <head>
     <meta charset="utf-8" />
